Fixed a text wrapping issue

--- a/issues/static/css/project_detail.css
+++ b/issues/static/css/project_detail.css
@@ -220,6 +220,7 @@ ul.issue-list {
     padding: 4px 4px 4px 4px;
     margin: 2px 2px 2px 2px;
     border: 1px solid #3A3A3A;
+    white-space:normal;
 }
 
 
